# Retail-Insights-Assistant

./: .env.example  .gitignore  README.md  pyproject.toml
presentation/: retail_insights_architecture.pptx
src/: app.py  config.py  session.py  upload.py
src/agents/: extraction.py  fact_extractor.py  formatter.py  graph.py  nl2sql.py  preprocess.py  retrieval.py  router.py  schema_selector.py  summary.py  validation.py
src/data/: db.py  vectorstore.py
src/prompts/: formatter.txt  nl2sql.txt  rag_response.txt  response.txt  router.txt  summary.txt  system.txt  validation.txt
tests/: conftest.py  test_db.py  test_extraction.py  test_fact_extractor.py  test_preprocess.py  test_schema_selector.py  test_session.py  test_upload.py  test_validation.py  test_vectorstore.py
